--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -134,15 +134,15 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
         </h6>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
         <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Люди, Почта, One Note, Камера" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -158,9 +158,9 @@
         <a href="https://www.mediafire.com/file/9yeplmj1nrptgkq/Windows+10+21H2+V2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/88BlRRhJ#H5dWFeCpkpilClUb7sUclM_tfnpC0jR1n9PRocZBPU0" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
-        <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
         <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
           <br> Удалены приложения "​Камера, Почта, One Note, Windows Photos, Windows Sound Recorder, Get Started, People , Xbox, Windows Store" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -172,9 +172,9 @@
         </p>
         <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 V2 by Adderly (19.08.2022)</h6>
-        <img class="u-expanded-width-sm u-image u-image-default u-image-8" src="images/Windows101607V2byAdderly-2022-08-19-22-05-30.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-image u-image-default u-image-9" src="images/Windows101607V2byAdderly-2022-08-19-22-06-49.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-image u-image-default u-image-10" src="images/Windows101607V2byAdderly-2022-08-19-22-07-32.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows101607V2byAdderly-2022-08-19-22-05-30.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows101607V2byAdderly-2022-08-19-22-06-49.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows101607V2byAdderly-2022-08-19-22-07-32.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
