--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -134,15 +134,15 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
         <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Люди, Почта, One Note, Камера" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
