--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -171,9 +171,8 @@
         <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-2">Последний ролик</h3>
         <div class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/gHY-d0RYUsc?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/l8iepnR29NY?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
           </div>
-          <div class="u-preserve-proportions-child" style="padding-top: 56.11%;"></div>
         </div>
       </div>
     </section>
