--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -134,7 +134,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V4 by Adderly (14.08.2022)<br>
         </h6>
@@ -144,7 +144,7 @@
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7ByAdderly-2022-08-14-13-08-29.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
+        <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
@@ -176,11 +176,12 @@
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>В отличии от 4 версии, нет никаких тем.
         </p>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
+        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 10</a>
       </div>
     </section>
     
