--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -134,7 +134,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 8.0<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 Pro V2 by Adderly (15.08.2022)<br>
@@ -156,12 +156,13 @@
           <br>Образ весит 4.3 GB, после установки Windows занимает 12.5 GB.<br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
-        <a href="https://drive.google.com/file/d/1LQW3fzzeafeKR-0r-5Y8VKUrgDAww4TE/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/g4cuskumg56nimw/Windows+8.0+V2+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1LQW3fzzeafeKR-0r-5Y8VKUrgDAww4TE/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/g4cuskumg56nimw/Windows+8.0+V2+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/T0ESiBJL#Qo1hzppwPjSBqjJ553JcF8HVo9UIPVofsgxAqmaE35U" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-3 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
       </div>
     </section>
     
