--- a/Windows-PE-от-Аддерли.html
+++ b/Windows-PE-от-Аддерли.html
@@ -144,6 +144,10 @@
         </p>
         <a href="https://drive.google.com/file/d/1metQohpO3PN9bKYTMEyjVG6s0ehix1jJ/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать WindowsPE by Adderly [Google Drive]</a>
         <a href="https://drive.google.com/file/d/1iXQN0tGZB0x4wm4GSQ2l6Jog6CyXWftQ/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-2" target="_blank">Скачать WindowsPE Mini by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/xwh02un6ahpchi6/WindowsPE_10_by_Adderly.ISO/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-3" target="_blank">Скачать WindowsPE by Adderly [MediaFire]</a>
+        <a href="https://www.mediafire.com/file/o3fkcfauudob7t4/WindowsPE_10_Mini_by_Adderly.ISO/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-4" target="_blank">Скачать WindowsPE Mini by Adderly [​MediaFire]</a>
+        <a href="https://mega.nz/file/I24BRbqY#QCLBeBnwQUwUWA2G1z1zltnYBgoEKt2i3RZKcNpdX08" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-5" target="_blank">Скачать WindowsPE by Adderly [MEGA.NZ]</a>
+        <a href="https://mega.nz/file/RrYkxTpZ#pbjehcqRsg_zyQcIbQm09qpV7btRHi-kV9ga3g0beso" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-6" target="_blank">Скачать WindowsPE Mini by Adderly [​MEGA.NZ]</a>
       </div>
     </section>
     
