--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -154,9 +154,9 @@
           <br>Образ весит 6.5 GB, после установки Windows занимает 19.8 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/9yeplmj1nrptgkq/Windows+10+21H2+V2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/88BlRRhJ#H5dWFeCpkpilClUb7sUclM_tfnpC0jR1n9PRocZBPU0" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/9yeplmj1nrptgkq/Windows+10+21H2+V2+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/88BlRRhJ#H5dWFeCpkpilClUb7sUclM_tfnpC0jR1n9PRocZBPU0" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
@@ -170,8 +170,8 @@
           <br>Образ весит 5.32 GB, после установки Windows занимает 11 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
-        <a href="https://mega.nz/file/K0UxQAaT#f9g8DW5uyqYoGpOmNtv02kbsaVwFb12Oa5d5P5wJsmY" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-5" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
+        <a href="https://mega.nz/file/K0UxQAaT#f9g8DW5uyqYoGpOmNtv02kbsaVwFb12Oa5d5P5wJsmY" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 V2 by Adderly (19.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows101607V2byAdderly-2022-08-19-22-05-30.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows101607V2byAdderly-2022-08-19-22-06-49.png" alt="" data-image-width="1366" data-image-height="768">
@@ -185,8 +185,8 @@
           <br>Образ весит 4.68 GB, после установки Windows занимает 12.4 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1yMncHe1nWKiZ9jmo8y1SIAnjviEOYwX4/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-6" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [Google Drive]</a>
-        <a href="https://mega.nz/file/31lUHKQJ#yr0IwRdlO0cWbAIyMpJL-0wIgdSEcwtliacTM-DGsOs" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-7" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1yMncHe1nWKiZ9jmo8y1SIAnjviEOYwX4/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [Google Drive]</a>
+        <a href="https://mega.nz/file/31lUHKQJ#yr0IwRdlO0cWbAIyMpJL-0wIgdSEcwtliacTM-DGsOs" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 10 Pro 1607 V2 by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 11</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 8.1</a>
