--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -70,7 +70,6 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
@@ -108,7 +107,6 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
@@ -133,7 +131,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-771a">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Сборки Windows Mini</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows7MiniV2byAdderly-2022-08-16-22-23-49.png" alt="" data-image-width="1366" data-image-height="768">
@@ -182,14 +180,17 @@
           <br>Образ весит 2.73 GB, после установки Windows занимает около 4 GB.&nbsp;<br>
         </p>
         <a href="https://drive.google.com/file/d/1kTe8k7tE-weFieJJ76kA-824dkweUcWI/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-13" target="_blank">Скачать Windows 10 EDU Mini by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/6awzj2omlvokfk9/Windows+10+Mini+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-14" target="_blank">Скачать Windows 10 EDU Mini by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/Qqg3VTAT#VxQKRkx1A61mEkETo9BcsgfHXsdv5-A3id2UEF4avdQ" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-15" target="_blank">Скачать Windows 10 EDU Mini by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-10">Windows 11 EDU Mini by Adderly (22.08.2022)</h6>
-        <img class="u-expanded-width-md u-image u-image-default u-image-12" src="images/Windows11MinibyAddrly-2022-08-22-01-15-14.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-image u-image-default u-image-13" src="images/Windows11MinibyAddrly-2022-08-22-01-22-08.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-12" src="images/Windows11MinibyAddrly-2022-08-22-01-15-14.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-13" src="images/Windows11MinibyAddrly-2022-08-22-01-22-08.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-11"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и Активатор<br>
           <br>Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены компоненты планшетного ПК <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалёна подсистема для UNIX<br>И очень много прочего.<br>
           <br>Образ весит 3.1 GB, после установки Windows занимает около 7 GB.&nbsp;<br>
         </p>
-        <a href="https://drive.google.com/file/d/1Y7TSlAi6BUC8dEQcd18MEw3aI5m_cnIY/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-14" target="_blank">Скачать Windows 11 EDU Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1Y7TSlAi6BUC8dEQcd18MEw3aI5m_cnIY/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-16" target="_blank">Скачать Windows 11 EDU Mini by Adderly [Google Drive]</a>
+        <a href="https://mega.nz/file/cyJXGJYD#BI7SSDiXdBQ76KOYpszXM7Ok8VvtOUfCt-qEzYQ7b78" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-17" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MEGA.NZ]</a>
       </div>
     </section>
     
