--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -175,11 +175,12 @@
           <br>В отличии от 4 версии, нет никаких тем.
         </p>
         <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
-        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
+        <a href="https://www.mediafire.com/file/kdq8r0e6tqwxfr4/Windows+7+V3.1+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-6" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 10</a>
       </div>
     </section>
     
