--- a/Windows-Lite-x32-Сборки.html
+++ b/Windows-Lite-x32-Сборки.html
@@ -151,10 +151,11 @@
           <br>Образ весит 2.97 GB, после установки Windows занимает 8.88 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 рязрадные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/ImZzWDhA#YoeooKNXBB5khh7DGuGCdf6Ky8VL487R0XmKw1EkgE8" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows Lite</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows Lite</a>
       </div>
     </section>
     
