--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -131,7 +131,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-771a">
-      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Сборки Windows Mini</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows7MiniV2byAdderly-2022-08-16-22-23-49.png" alt="" data-image-width="1366" data-image-height="768">
@@ -190,7 +190,8 @@
           <br>Образ весит 3.1 GB, после установки Windows занимает около 7 GB.&nbsp;<br>
         </p>
         <a href="https://drive.google.com/file/d/1Y7TSlAi6BUC8dEQcd18MEw3aI5m_cnIY/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-16" target="_blank">Скачать Windows 11 EDU Mini by Adderly [Google Drive]</a>
-        <a href="https://mega.nz/file/cyJXGJYD#BI7SSDiXdBQ76KOYpszXM7Ok8VvtOUfCt-qEzYQ7b78" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-17" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MEGA.NZ]</a>
+        <a href="https://www.mediafire.com/file/s4dfz7yqn696391/Windows+11+Mini+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-17" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/cyJXGJYD#BI7SSDiXdBQ76KOYpszXM7Ok8VvtOUfCt-qEzYQ7b78" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-18" target="_blank">Скачать Windows 11 EDU Mini by Adderly [MEGA.NZ]</a>
       </div>
     </section>
     
