--- a/Проверка-на-целостность.html
+++ b/Проверка-на-целостность.html
@@ -79,6 +79,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
@@ -116,6 +117,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
@@ -145,25 +147,25 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10V21709byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
         <h4 class="u-text u-text-default u-text-7">Windows проходит проверку на целостность.<br>
         </h4>
-        <h2 class="u-text u-text-default u-text-8"> Windows 10 1607 by Adderly</h2>
-        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows101607byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h2 class="u-text u-text-default u-text-8"> Windows 10 1607 V2 by Adderly</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows101607V2byAdderly-2022-08-27-18-06-37.png" alt="" data-image-width="1024" data-image-height="768">
         <h4 class="u-text u-text-default u-text-9">Windows проходит проверку на целостность.<br>
         </h4>
         <h2 class="u-text u-text-default u-text-10">Windows 8.1 V5 by Adderly</h2>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.1V5byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <img class="u-expanded-width-md u-image u-image-default u-image-5" src="images/Windows8.1V5byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
         <h4 class="u-text u-text-default u-text-11">Windows проходит проверку на целостность.<br>
         </h4>
         <h2 class="u-text u-text-default u-text-12">Windows 8.1 Lite x32 by Adderly</h2>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows8.1Litex32byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <img class="u-expanded-width-md u-image u-image-default u-image-6" src="images/Windows8.1Litex32byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
         <h4 class="u-text u-text-default u-text-13">Windows проходит проверку на целостность.<br>
         </h4>
         <h2 class="u-text u-text-default u-text-14">Windows 8.0 V2 by Adderly</h2>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows8.0V2byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <img class="u-expanded-width-md u-image u-image-default u-image-7" src="images/Windows8.0V2byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
         <h4 class="u-text u-text-default u-text-15"> Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что удалено несколько приложений.<br>Про это написано в листинге изменений Windows 8.0 V2 by Adderly.<br>После повторной проверки, никаких восстановлений не будет.<br>
         </h4>
         <h2 class="u-text u-text-default u-text-16">Windows 7 V4 by Adderly</h2>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7V4byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
-        <h4 class="u-text u-text-default u-text-17"> Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что установлен патч для тем.<br>После повторной проверки, никаких восстановлений не будет.<br>
+        <img class="u-expanded-width-md u-image u-image-default u-image-8" src="images/Windows7V4byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-17"> Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что установлен патч для тем.<br>После повторной проверки, никаких восстановлений не будет.<br>И после проверки, не будут работать темы.
         </h4>
       </div>
     </section>
