--- a/Отзывы-и-обзоры.html
+++ b/Отзывы-и-обзоры.html
@@ -79,6 +79,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
@@ -116,6 +117,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
