--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -86,6 +86,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
@@ -123,6 +124,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/FineWork-Type-PRO.html">FineWork Type PRO</a>
@@ -154,18 +156,19 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-8">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-9">Сборки Windows 11</a>
         <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-10">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-11">Windows Lite x32 сборки</a>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-12">Windows Lite сборки</a>
-        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-13" target="_blank">Предложить идею / Оставить отзыв</a>
-        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-14">Софт от Аддерли</a>
-        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-15">Старые Windows</a>
-        <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-16" target="_blank">Как устанавливать сборки от Аддерли</a>
-        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-17" target="_blank">По поводу uTorrent раздач</a>
-        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-18" target="_blank">Проверки на целостность</a>
-        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-19" target="_blank">Поддержать Автора сборок</a>
-        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-20" target="_blank">Сборки от Аддерли Telegram</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-21" target="_blank">Сборки от Аддерли YouTube</a>
-        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-22">Обзоры и отзывы о Сборках от Аддерли</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-11">Ключи от Аддерли</a>
+        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-12">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-13">Windows Lite сборки</a>
+        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-14" target="_blank">Предложить идею / Оставить отзыв</a>
+        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-15">Софт от Аддерли</a>
+        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-16">Старые Windows</a>
+        <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-17" target="_blank">Как устанавливать сборки от Аддерли</a>
+        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-18" target="_blank">По поводу uTorrent раздач</a>
+        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-19" target="_blank">Проверки на целостность</a>
+        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-20" target="_blank">Поддержать Автора сборок</a>
+        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-21" target="_blank">Сборки от Аддерли Telegram</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-22" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-23">Обзоры и отзывы о Сборках от Аддерли</a>
         <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-2">Последний ролик</h3>
         <div class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
@@ -203,6 +206,7 @@
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
+        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
       </div>
     </section>
     <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-hidden-xs u-image u-section-3" id="sec-09cf" data-image-width="1920" data-image-height="1200">
@@ -234,6 +238,7 @@
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
+        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
       </div>
     </section>
     <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-sm u-hidden-xl u-hidden-xs u-image u-section-4" id="sec-cbcb" data-image-width="1920" data-image-height="1200">
@@ -272,6 +277,7 @@
           <div class="u-preserve-proportions-child" style="padding-top: 56.11%;"></div>
         </div>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
       </div>
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xl u-hidden-xs u-image u-section-5" id="sec-b4fa" data-image-width="1920" data-image-height="600">
@@ -310,6 +316,7 @@
           <div class="u-preserve-proportions-child" style="padding-top: 56.11%;"></div>
         </div>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-6" id="sec-f0ab">
