--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- End Google Analytics -->\
     ".replace(/gascript/g, 'script'));
     }
-    </script></head>
+    </script><script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6276505933668266" crossorigin="anonymous"></script></head>
   <body data-home-page="Сборки-от-Аддерли.html" data-home-page-title="Сборки от Аддерли" class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
